<resources>
    <string name="app_name">Calculator</string>
    <string name="divide_symbol">÷</string>
    <string name="delete_left">\uef00</string>
    <string name="pow">x^2</string>
    <string name="square_root">√x</string>
    <string name="mm">M-</string>
    <string name="pr">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="brackets">()</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mp">M+</string>
    <string name="mr">MR</string>
    <string name="mc">MC</string>
    <string name="eq">=</string>
    <string name="dot">,</string>
    <string name="_0">0</string>
    <string name="p_m">+/-</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">—</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="mul">×</string>
    <string name="ms">MS</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="wrongEmail">Wrong email</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="registerEmailBlank">Email field is blank</string>
    <string name="usedEmail">This email is already used</string>
    <string name="passwordBlank">Password field is blank</string>
    <string name="differentPasswords">Passwords don\'t match</string>
    <string name="registered">Successfully registered</string>
    <string name="accountsMap">ACCOUNTS</string>
    <string name="loginText">Login</string>
    <string name="loginButton">Login</string>
    <string name="registerText">Register</string>
    <string name="registerButton">Register</string>
    <string name="emailNotValid">Email is not valid</string>
    <string name="passwordNotValid">Password is not valid</string>
    <integer name="com_vk_sdk_AppId">51619458</integer>
</resources>